# sota-mvs

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  colmap2mvsnet_acm_perf.py  eval.py  pyproject.toml
eth3d/: README.md  __main__.py  colmapio.py  eth3d_downloader.py  eth3d_rescale.py  main.py  pyproject.toml  requirements.txt
eth3d/eth3d/: __init__.py  colmapio.py  downloader.py  main.py  rescale.py
eth3d/src/eth3d/: __main__.py  downloader.py  main.py
src/eval/: colmap2mvsnet_acm_perf.py  eval.py  visualize_db.py
tools/: telemetry.py
