[project]
name = "eth3d"
version = "0.1.0"
description = "ETH 3D dataset downloader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py7zr",
    "opencv-python",
    "requests",
    "tqdm"
]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project.scripts]
eth3d-cli = "eth3d.main:main"